microservice-demo/adservice.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: adservice
spec: 
    replicas: 1
    selector: 
        matchLabels:   ## Must be checked 
            app: adservice
    template:
        metadata: 
            name: adservice
            labels: 
                app: adservice
        spec: 
            containers: 
            -   name: adservice
                image: gcr.io/google-samples/microservices-demo/adservice:v0.4.2
                ports: 
                -   containerPort: 9555
---
apiVersion: v1 
kind: Service
metadata: 
  name: adservice
spec: 
  selector: 
    app: adservice
  type: ClusterIP
  ports: 
  - protocol: TCP 
    port: 9555
    targetPort: 9555
