microservice-demo/cartservice.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: cartervice
spec: 
    replicas: 1
    selector: 
        matchLabels:   ## Must be checked 
            app: cartservice
    template:
        metadata: 
            name: cartservice
            labels: 
                app: cartservice
        spec: 
            containers: 
            -   name: cartservice
                image: gcr.io/google-samples/microservices-demo/cartservice:v0.4.2
                ports: 
                -   containerPort: 7070
---
apiVersion: v1 
kind: Service
metadata: 
  name: cartservice
spec: 
  selector: 
    app: cartservice
  type: ClusterIP
  ports: 
  - protocol: TCP 
    port: 7070
    targetPort: 7070
