microservice-demo/checkoutservice.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: checkoutservice
spec: 
    replicas: 1
    selector: 
        matchLabels:   ## Must be checked 
            app: checkoutservice     
    template:
        metadata: 
            name: chekoutservice
            labels: 
                app: checkoutservice
        spec: 
            containers: 
            -   name: checkoutservice
                image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.4.2
                ports: 
                -   containerPort: 5050
---
apiVersion: v1 
kind: Service
metadata: 
  name: checkoutservice
spec: 
  selector: 
    app: checkoutservice
  type: ClusterIP
  ports: 
  - protocol: TCP 
    port: 5050
    targetPort: 5050
