microservice-demo/currencyservice.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: currencyservice
spec: 
    replicas: 1
    selector: 
        matchLabels:   ## Must be checked 
            app: currencyservice
    template:
        metadata: 
            name: currencyservice
            labels: 
                app: currencyservice
        spec: 
            containers: 
            -   name: currencyservice
                image: gcr.io/google-samples/microservices-demo/currencyservice:v0.4.2
                ports: 
                -   containerPort: 7000
---
apiVersion: v1 
kind: Service
metadata: 
  name: currencyservice
spec: 
  selector: 
    app: currencyservice
  type: ClusterIP
  ports: 
  - protocol: TCP 
    port: 7000
    targetPort: 7000
