microservice-demo/emailservice.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: emailservice
spec: 
    replicas: 1
    selector: 
        matchLabels:   ## Must be checked 
            app: emailservice       
    template:
        metadata: 
            name: emailservice
            labels: 
                app: emailservice
        spec: 
            containers: 
            -   name: emailservice
                image: gcr.io/google-samples/microservices-demo/emailservice:v0.4.2
                ports: 
                -   containerPort: 8080 
---
apiVersion: v1 
kind: Service
metadata: 
  name: emailservice
spec: 
  selector: 
    app: emailservice
  type: ClusterIP
  ports: 
  - protocol: TCP 
    port: 8080 
    targetPort: 8080
