microservice-demo/frontend.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: frontend
    labels: 
        app: frontend
        tier: frontend 
spec: 
    replicas: 1
    selector: 
        matchLabels:   ## Must be checked 
            app: frontend
           
    template:
        metadata: 
            name: frontend 
            labels: 
                app: frontend 
        spec: 
            containers: 
            -   name: frontend
                image: gcr.io/google-samples/microservices-demo/frontend:v0.4.2
                ports: 
                -   containerPort: 8080
---
apiVersion: v1 
kind: Service
metadata: 
  name: frontendservice
spec: 
  selector: 
    app: frontend
  type: NodePort
  ports: 
  - protocol: TCP 
    port: 8080 
    targetPort: 8080 
    nodePort: 31000
