microservice-demo/paymentservice.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: paymentservice
spec: 
    replicas: 1
    selector: 
        matchLabels:   ## Must be checked 
            app: paymentservice     
    template:
        metadata: 
            name: paymentservice
            labels: 
                app: paymentservice
        spec: 
            containers: 
            -   name: paymentservice
                image: gcr.io/google-samples/microservices-demo/paymentservice:v0.4.2
                ports: 
                -   containerPort: 50051
---
apiVersion: v1 
kind: Service
metadata: 
  name: paymentservice
spec: 
  selector: 
    app: paymentservice
  type: ClusterIP
  ports: 
  - protocol: TCP 
    port: 50051 
    targetPort: 50051
