microservice-demo/productcatalogservice.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: productcatalogservice
spec: 
    replicas: 1
    selector: 
        matchLabels:   ## Must be checked 
            app: productcatalogservice     
    template:
        metadata: 
            name: productcatalogservice
            labels: 
                app: productcatalogservice
        spec: 
            containers: 
            -   name: productcatalogservice
                image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.4.2
                ports: 
                -   containerPort: 3550
---
apiVersion: v1 
kind: Service
metadata: 
  name: productcatalogservice
spec: 
  selector: 
    app: productcatalogservice
  type: ClusterIP
  ports: 
  - protocol: TCP 
    port: 3550
    targetPort: 3550
