microservice-demo/shippingservice.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: shippingservice
spec: 
    replicas: 1
    selector: 
        matchLabels:   ## Must be checked 
            app: shippingservice
    template:
        metadata: 
            name: shippingservice
            labels: 
                app: shippingservice
        spec: 
            containers: 
            -   name: shippingservice
                image: gcr.io/google-samples/microservices-demo/shippingservice:v0.4.2
                ports: 
                -   containerPort: 50051
---
apiVersion: v1 
kind: Service
metadata: 
  name: shippingservice
spec: 
  selector: 
    app: shippingservice
  type: ClusterIP
  ports: 
  - protocol: TCP 
    port: 50051
    targetPort: 50051
